<resources>
    <string name="app_name">Pregency Tracker</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_second">Card</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">update</string>
    <string name="text_title">Pregent women record</string>
    <string name="keyword">Keyword</string>

    <string-array name="state_names">

        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh </item>
        <item>Assam </item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadar and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Lakshadweep</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Puducherry (Pondicherry)</item>


    </string-array>
    <string-array name="blood_grp">

        <item> A+ </item>
        <item> B+ </item>
        <item> A- </item>
        <item> B- </item>
        <item> AB+ </item>
        <item> AB- </item>
        <item> O+ </item>
        <item> O -</item>
    </string-array>

    <string-array name="maritalstatus_grp">

        <item> Married </item>
        <item> Single </item>
        <item> Divorced </item>

    </string-array>

    <string name="helptext1">

    Hello ! Dear User , If you have any issues regarding any malfunction in this app then please send us a mail
    at - (shivanshkancha25@gmail.com) or (bagle_karan.ghrcecs@raisoni.net) .
</string>

    <string name="helptext2">

    Please refer below link for Online Pregnancy Weight Gain Calculator :
</string>

    <string name="copy">

    © Copyright of Girish Private Limited

</string>


</resources>
